[package]
name = "channels-console-tokio-test"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
console-subscriber = { version = "0.5.0", optional = true }
tokio = { version = "1.48.0", features = ["sync", "macros", "rt-multi-thread", "time"] }
channels-console = { workspace = true, optional = true, features = ["tokio"] }
tracing-subscriber = { version = "0.3", features = ["time", "env-filter"] }
futures-channel = "0.3"
futures-util = "0.3"
rand = "0.9.2"

[features]
channels-console = ["dep:channels-console"]
tokio-console = ["tokio/full", "tokio/tracing", "dep:console-subscriber"]
