[package]
name = "tokio-channels-console-test"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
console-subscriber = { version = "0.5.0", optional = true }
tokio = { version = "1.48.0", features = ["full"] }
tokio-channels-console = { workspace = true, optional = true }
tracing-subscriber = { version = "0.3", features = ["time", "env-filter"] }

[features]
tokio-channels-console = ["tokio-channels-console/tokio-channels-console"]
tokio-console = ["tokio/full", "tokio/tracing", "dep:console-subscriber"]
